--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "http": "0.0.0",
+    "ibm-watson": "^4.1.0",
     "nodemon": "^1.19.0",
     "socket.io": "^2.2.0"
   }
