--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "http": "0.0.0",
     "ibm-watson": "^4.1.0",
     "nodemon": "^1.19.0",
-    "socket.io": "^2.2.0"
+    "request": "^2.88.0",
+    "socket.io": "^2.2.0",
+    "zip-folder": "^1.0.0"
   }
 }
