--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-version=*
- apikey=*
-url=*
+version=2019-02-28
+ apikey=fWABSMQqpDznXet51DTjsYC8Savn12RpePUaBfZt92wv
+url=https://gateway.watsonplatform.net/assistant/api
