Raphael Martinez: se agregan mejoras en estilos

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 version=2019-02-28
  apikey=fWABSMQqpDznXet51DTjsYC8Savn12RpePUaBfZt92wv
 url=https://gateway.watsonplatform.net/assistant/api
+
+
+PATH = http://localhost:1337
+#PATH = https://perichatbot.azurewebsites.net
