--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^1.19.0",
     "request": "^2.88.0",
     "socket.io": "^2.2.0",
+    "watson-developer-cloud": "^4.0.1",
     "zip-folder": "^1.0.0"
   }
 }
