--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple socket con socket io",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon index.js"
   },
   "author": "Raphael Martinez",
@@ -19,5 +19,8 @@
     "socket.io": "^2.2.0",
     "watson-developer-cloud": "^4.0.1",
     "zip-folder": "^1.0.0"
+  },
+  "devDependencies": {
+    "jest": "^24.8.0"
   }
 }
